ArticleReviewProject/src/main/java/com/example/articlereviewproject/error/UnauthorizedException.java
package com.example.articlereviewproject.error;

public class UnauthorizedException extends RuntimeException {

    public UnauthorizedException(String message) {
        super(message);
    }
}
